# sentineldetect

./: .env.example  .gitignore  apply-generate-patch.py  apply-rules-patch.py  layout-nav-patch.py  middleware.ts  package-lock.json  package.json  proxy.ts
app/: globals.css  layout.tsx  page.tsx
app/(auth)/confirm/: page.tsx
app/(auth)/forgot-password/: page.tsx
app/(auth)/login/: page.tsx
app/(auth)/reset-password/: page.tsx
app/(auth)/signup/: page.tsx
app/(dashboard)/: layout.tsx
app/(dashboard)/analyser/: page.tsx
app/(dashboard)/api-docs/: page.tsx
app/(dashboard)/generate/: page.tsx
app/(dashboard)/home/: page.tsx
app/(dashboard)/integrations/: page.tsx
app/(dashboard)/matrix/: page.tsx
app/(dashboard)/profile/: page.tsx
app/(dashboard)/report/: page.tsx
app/(dashboard)/rules/: page.tsx
app/(dashboard)/settings/: page.tsx
app/(dashboard)/sigma/: page.tsx
app/(dashboard)/sigma-hub/: page.tsx
app/(dashboard)/soc/: page.tsx
app/(dashboard)/teams/: page.tsx
app/(dashboard)/templates/: page.tsx
app/community/: page.tsx
browser-extension/: manifest.json  popup.html  popup.js
lib/: types.ts
lib/ai/: index.ts  prompts.ts  triage.ts
lib/integrations/: parsers.ts  slack.ts
lib/mitre/: threat-groups.ts
lib/supabase/: server.ts
public/: manifest.json
src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
src-tauri/src/: main.rs
supabase/: schema.sql
supabase/migrations/: 002_new_features.sql  003_user_api_keys.sql  004_api_keys.sql  005_mfa_versions.sql  006_profile_features.sql  007_new_features.sql
(+38 files in other folders)
